--- a/12-march/src/index.css
+++ b/12-march/src/index.css
@@ -44,7 +44,6 @@ h1, h2, h3, h4, h5, h6, p {
 
 .main {
   /* height: 100vh; */
-  border: 2px solid black;
 }
 
 .mainContentSection {
@@ -55,7 +54,6 @@ h1, h2, h3, h4, h5, h6, p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* border: 3px solid red; */
 }
 
 .mainContentSectionDiv {  
@@ -74,10 +72,9 @@ h1, h2, h3, h4, h5, h6, p {
 
 .mainContentSection > button {
   padding: 10px 20px;
-  /* width: 250px; */
   border-radius: 50px;
   border: none;
-  background-color: skyblue;
+  background-color: rgb(85, 146, 226);
   color: white;
   font-weight: 800;
 }
@@ -87,10 +84,60 @@ h1, h2, h3, h4, h5, h6, p {
 
 .mainFeatureSection {
   height: 450px;
-  /* border: 2px solid red; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0 0 0;
+}
+
+.featureCardContainer {
+  width: 95%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.featureCard {
+  padding: 20px;
+  height: 350px;
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.featureCardImg {
+  height: 90px;
+  width: 90px;
+  border-radius: 50%;
+  background-color: rgb(85, 146, 226);
+  font-size: 25px;
+  color: white;
   display: flex;
   justify-content: center;
-  padding: 30px
+  align-items: center;
+}
+
+.featureCardContent {
+  text-align: center;
+}
+
+.featureCardContent > h2 {
+  margin-bottom: 15px;
+  font-weight: 300;
+}
+
+.featureCardContent > p {
+  margin-bottom: 15px;
+  font-weight: 300;
+  line-height: 1.5em;
+  font-size: 16px;
+  font-weight: 200;
+}
+
+.featureCardContent > a {
+  text-decoration: none;
+  color: rgb(122, 122, 243);
 }
 
 /* main section */
@@ -115,13 +162,7 @@ h1, h2, h3, h4, h5, h6, p {
   justify-content: space-around;
   /* width: 400px; */
 }
-
-.leftFooter > div {
-  
-  
-  /* margin-right: 50px; */
-}
-
+ 
 .leftFooter > div p {
   font-weight: 200;  
 }
