--- a/12-march/src/index.css
+++ b/12-march/src/index.css
@@ -140,6 +140,49 @@ h1, h2, h3, h4, h5, h6, p {
   color: rgb(122, 122, 243);
 }
 
+/* social section */
+.mainSocialSection {
+  
+  background-image: url("https://images.unsplash.com/photo-1624259458752-a2c5922abea0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTYyfHx0ZWFtd29ya3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60");
+  background-size: 100%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.mainSocialSectionSubContainer {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.socialCardContainer {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.socialCardContainer > .iconFont {
+  font-size: 45px;
+  margin-bottom: 20px;
+}
+
+.socialCardContainer > h1 {
+  font-weight: 300;
+  margin-bottom: 15px;
+}
+
+.socialCardContainer > p {
+  font-size: 14px;
+}
+
+/* social section */
+
 /* main section */
 
 /* footer section */
